NEW171664
text-transform:uppercase in SVG causes misplaced letters
https://bugs.webkit.org/show_bug.cgi?id=171664
Summary text-transform:uppercase in SVG causes misplaced letters
Simon Fraser (smfr)
Reported 2017-05-04 09:13:00 PDT
The 'M' is missing from the second line in this test case: https://codepen.io/AmeliaBR/pen/61a8a4f3848023859253cb5341e17ef2?editors=1100
Attachments
Testcase (834 bytes, text/html)
2017-06-17 10:28 PDT, Simon Fraser (smfr)
no flags
Safari 156 and STP 151 differs from other browsers (1016.77 KB, image/png)
2022-08-13 04:58 PDT, Ahmad Saleem
no flags
Radar WebKit Bug Importer
Comment 1 2017-05-04 09:14:16 PDT
Simon Fraser (smfr)
Comment 2 2017-06-17 10:28:50 PDT
Created attachment 313200 [details] Testcase
Simon Fraser (smfr)
Comment 3 2017-06-17 10:40:27 PDT
Any test-transform triggers this, even if using uppercase and the letters are already uppercase. Happens only when the text-transform is on the encoding <text>, not an individual <tspan>.
Simon Fraser (smfr)
Comment 4 2017-06-17 10:46:16 PDT
I think this is about whitespace collapsing. If you remove the whitespace between the <tspan>s, the bug goes away.
Simon Fraser (smfr)
Comment 5 2017-06-17 10:56:02 PDT
In RenderText::styleDidChange() we call RenderText::setText(originalText(), true), which sets the text to RenderSVGInlineText::originalText() which adds a newline that is not included in RenderText::originalText(). I'm not sure why RenderSVGInlineText has to override originalText().
Simon Fraser (smfr)
Comment 6 2017-06-19 20:39:29 PDT
Antti added RenderSVGInlineText::originalText() in https://trac.webkit.org/changeset/160259/webkit, but without an explanation for why SVG is special.
Simon Fraser (smfr)
Comment 7 2017-06-19 20:59:05 PDT
Possible patch: diff --git a/Source/WebCore/rendering/svg/RenderSVGInlineText.cpp b/Source/WebCore/rendering/svg/RenderSVGInlineText.cpp index 5aebea8abc3a9ede361f2edfc3e20d5ea1e9b611..a5af6fe694a4982ec697fed6339d32be624f474e 100644 --- a/Source/WebCore/rendering/svg/RenderSVGInlineText.cpp +++ b/Source/WebCore/rendering/svg/RenderSVGInlineText.cpp @@ -78,7 +78,7 @@ String RenderSVGInlineText::originalText() const void RenderSVGInlineText::setRenderedText(const String& text) { - RenderText::setRenderedText(text); + RenderText::setRenderedText(applySVGWhitespaceRules(text, style().whiteSpace() == PRE)); if (auto* textAncestor = RenderSVGText::locateRenderSVGTextAncestor(*this)) textAncestor->subtreeTextDidChange(this); }
Ahmad Saleem
Comment 8 2022-08-13 04:58:53 PDT
Created attachment 461574 [details] Safari 156 and STP 151 differs from other browsers I am able to reproduce this issue in Safari 15.6 and Safari TP 151 and as can bee seen in the attached screenshot "M" is on top line and not next line like other browsers. Just wanted to share updated testing results. Thanks!
Ahmad Saleem
Comment 9 2022-09-15 16:07:21 PDT
*** Bug 245248 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 10 2022-10-23 12:46:08 PDT
It works and compile if you do: void RenderSVGInlineText::setRenderedText(const String& text) { - RenderText::setRenderedText(text); + RenderText::setRenderedText(applySVGWhitespaceRules(text, style().whiteSpace() == WhiteSpace::Pre)); But it has performance implications, my PR was here: https://github.com/WebKit/WebKit/pull/4405 It has performance implications as mentioned by @Simon since above change will take assumption that all text has whitespace and run with it. ____ I had to close my PR due to mid changes clash, it got unintended changes from some other changes. Will try again in future but if someone has to take it up, they can.
Note You need to log in before you can comment on or make changes to this bug.