text-transform:uppercase in SVG causes misplaced letters

text-transform:uppercase in SVG causes misplaced letters

https://bugs.webkit.org/show_bug.cgi?id=171664

Reviewed by NOBODY (OOPS!).

Patch Authored by Simon Fraser and

Partial Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=184655

Override setRenderText method in RenderSVGInlineText so
that text with SVG whitespace rules can be applied.

* Source/WebCore/rendering/svg/RenderSVGInlineText.cpp:
(RenderSVGInlineText::originalText): Update setRenderedText to applySVGWhitespace rules
* LayoutTests/svg/text/text-transform-whitespace-rules.svg: Test Added
* LayoutTests/svg/text/text-transform-whitespace-rules-expected.svg: Added Test Expectations